--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,10 +52,38 @@ button {
   color: #fff;
   border-radius: 4px;
   font-size: 1rem;
-  width: 4rem;
+  /* width: 4rem; */
 }
 
 .pics .content img {
   width: 60%;
   padding: 1rem;
+}
+
+nav ul {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav ul a {
+  padding: 0.5rem 1rem;
+}
+
+nav a:hover,
+.p-home .t-home a,
+.p-about .t-about a,
+.p-pictures .t-pictures a,
+.p-contact .t-contact a {
+  background-color: #007eb6;
+  color: #fff;
+  border-radius: 4px;
+}
+
+.p-pictures img {
+  max-width: 50%;
+}
+.p-pictures h1 {
+  color: rgb(11, 123, 11);
 }
