--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,7 +63,7 @@ button {
   color: #fff;
   border-radius: 4px;
   font-size: 1rem;
-  width: 4rem;
+  /* width: 4rem; */
 }
 
 .pics .content img {
@@ -73,4 +73,16 @@ button {
 
 .p-pictures img {
   max-width: 50%;
+}
+
+@media (width > 480px) {
+  .stories {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+  }
+}
+
+.stories .item {
+  border-bottom: 1px dashed #aaa;
 }
